0026243: Boolean operations failed on shapes with fillets

Detected bugs have been fixed.

Test case for issue CR26243